feature: Add a `replace` parameter for single node additions
This provides an "atomic" way of performing a replacement on a node without having to make two separate rest calls.
