# src/main/resources/luckperms-openapi.yml
@@ -323,6 +323,7 @@ paths:
       operationId: add-user-node
       parameters:
         - $ref: '#/components/parameters/temporaryNodeMergeStrategy'
+        - $ref: '#/components/parameters/replace'
       responses:
         '200':
           description: Ok - returns the updated nodes
@@ -862,6 +863,7 @@ paths:
       operationId: add-group-node
       parameters:
         - $ref: '#/components/parameters/temporaryNodeMergeStrategy'
+        - $ref: '#/components/parameters/replace'
       responses:
         '200':
           description: Ok - returns the updated nodes
@@ -1848,5 +1850,12 @@ components:
         $ref: '#/components/schemas/TemporaryNodeMergeStrategy'
       required: false
       description: The node merge strategy
+    replace:
+      name: replace
+      in: query
+      schema:
+        type: boolean
+      required: false
+      description: If the node should replace an existing node with the same key (delete and add)
 security:
   - apikey: []
